Refactor localization to use JetTreeMarkBundle exclusively
Replaced all references to MyBundle with JetTreeMarkBundle for consistency and maintainability. Adjusted UI components to retrieve localized strings from the updated JetTreeMarkBundle. Removed the deprecated MyBundle resource file. Updated threading model for actions to improve performance.

--- a/src/main/resources/messages/JetTreeMarkBundle.properties
+++ b/src/main/resources/messages/JetTreeMarkBundle.properties
@@ -1,2 +1,10 @@
 action.JetTreeMark.ShowTreeView.text=Show Tree View
 action.JetTreeMark.ShowTreeView.description=Show a tree view of the selected folder
+loading.text=(Loading...)
+loading_of.text=Loading
+errors.unable_to_load_directory=Unable to load directory
+close_this_tab=Close this tab
+copy_tree=Copy Tree
+copied=Copied!
+welcome_to_jet_tree_mark=Welcome to Jet Tree Mark
+welcome=Welcome
