Update build-docs.yml to change INSTANCE environment variable to 'Writerside/jd'

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  INSTANCE: 'JetTreeMark/jd'
+  INSTANCE: 'Writerside/jd'
   DOCKER_VERSION: '2025.04.8412'
 
 jobs:
