Add context menu and advanced node operations to tree view
Introduced a context menu with options like "Check Only Folders/Files," "Expand All," and level-specific operations for better tree control. Enhanced `CheckboxTreeNode` with methods for selecting nodes flexibly and updated the plugin version to 1.1.0. Updated documentation to reflect these new features.

--- a/src/main/resources/messages/JetTreeMarkBundle.properties
+++ b/src/main/resources/messages/JetTreeMarkBundle.properties
@@ -8,3 +8,14 @@ copy_tree=Copy Tree
 copied=Copied!
 welcome_to_jet_tree_mark=Welcome to Jet Tree Mark
 welcome=Welcome
+context_menu.title=Tree Options
+context_menu.check_all_children=Check All Children
+context_menu.check_all_folders=Check All Folders
+context_menu.uncheck_all_children=Uncheck All Children
+context_menu.check_without_children=Check Without Children
+context_menu.expand_all=Expand All
+context_menu.collapse_all=Collapse All
+context_menu.check_only_folders_this_level=Check Only Folders (This Level)
+context_menu.check_only_files_this_level=Check Only Files (This Level)
+context_menu.check_all_children_this_level=Check All Children (This Level)
+context_menu.level_operations=Level Operations
