Enhance TreeView to respect .gitignore for better performance
Updated plugin change notes to indicate improved handling of .gitignore in the TreeView. Files and folders in .gitignore are now unchecked by default, optimizing performance and user experience.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,6 +28,9 @@
             <li>Level-specific operations - apply actions only to the current level</li>
           </ul>
         </li>
+        <li>
+            Improved performance by unchecking files/folders mentioned in .gitignore by default in the TreeView.
+        </li>
       </ul>
     ]]></change-notes>
 
